--- a/teletubbies/XIBs/AddChannelVC.xib
+++ b/teletubbies/XIBs/AddChannelVC.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,15 +20,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eM7-KZ-Mdx" userLabel="bgView">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wuM-4g-nEg">
-                    <rect key="frame" x="20" y="100" width="335" height="320"/>
+                    <rect key="frame" x="20" y="124" width="335" height="320"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j87-mX-k2n" customClass="RoundedButton" customModule="teletubbies" customModuleProvider="target">
                             <rect key="frame" x="43" y="250" width="250" height="50"/>
@@ -58,7 +58,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Channel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cb5-5d-cB2">
-                            <rect key="frame" x="86" y="40" width="163" height="26.5"/>
+                            <rect key="frame" x="86.333333333333329" y="40" width="162.66666666666669" height="26.333333333333329"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -119,11 +119,11 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="eM7-KZ-Mdx" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="0bg-nA-inJ"/>
+                <constraint firstItem="eM7-KZ-Mdx" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="0bg-nA-inJ"/>
                 <constraint firstItem="wuM-4g-nEg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="5hI-V2-EWf"/>
                 <constraint firstItem="wuM-4g-nEg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="80" id="NN2-BM-yHZ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eM7-KZ-Mdx" secondAttribute="trailing" id="a6N-sW-Dzo"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eM7-KZ-Mdx" secondAttribute="bottom" id="htQ-jA-S3k"/>
+                <constraint firstAttribute="bottom" secondItem="eM7-KZ-Mdx" secondAttribute="bottom" id="htQ-jA-S3k"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="wuM-4g-nEg" secondAttribute="trailing" constant="20" id="l5E-Jj-1dp"/>
                 <constraint firstItem="eM7-KZ-Mdx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="wvS-mh-bNe"/>
             </constraints>
